Controller Fila criado

--- a/CRUDRestaurante/CRUDRestaurante.csproj
+++ b/CRUDRestaurante/CRUDRestaurante.csproj
@@ -195,7 +195,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\CardapioController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\FilaController.cs" />
     <Compile Include="Controllers\MesaController.cs" />
     <Compile Include="Controllers\ProdutoController.cs" />
     <Compile Include="Controllers\RestauranteController.cs" />
