--- a/CRUDRestaurante/CRUDRestaurante.csproj
+++ b/CRUDRestaurante/CRUDRestaurante.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AdminRestController.cs" />
+    <Compile Include="Controllers\AdminSistemaController.cs" />
     <Compile Include="Controllers\CardapioController.cs" />
     <Compile Include="Controllers\FilaController.cs" />
     <Compile Include="Controllers\GerentePedidosController.cs" />
