--- a/CRUDRestaurante/CRUDRestaurante.csproj
+++ b/CRUDRestaurante/CRUDRestaurante.csproj
@@ -202,6 +202,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ItemPedidoController.cs" />
+    <Compile Include="Controllers\PedidoController.cs" />
     <Compile Include="Controllers\UsuarioSistemaController.cs" />
     <Compile Include="Controllers\AdminSistemaController.cs" />
     <Compile Include="Controllers\CardapioController.cs" />
